# distriphile

./: .gitignore  C++ TASK 2_.docx  CMakeLists.txt  MohammedImaadIqbal_SCEM_C++_Task2.cpp  README.md  initDB.sql  main.cpp
src/: Auth.cpp  Auth.h  Commands.cpp  Commands.h  Transmission.cpp  Transmission.h  env _example.h  env_example.h  main.cpp
